--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "metro": "^4.3.3",
-    "mdi": "^4.5.95"
+    "mdi": "^4.5.95",
+    "flag-icon-css": "^3.4.5"
   }
 }
