--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "metro": "^4.3.3",
     "mdi": "^4.5.95",
-    "flag-icon-css": "^3.4.5"
+    "flag-icon-css": "^3.4.5",
+    "chart.js": "^2.9.3"
   }
 }
