--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "metro": "^4.3.3",
     "mdi": "^4.5.95",
     "flag-icon-css": "^3.4.5",
-    "chart.js": "^2.9.3"
+    "chart.js": "^2.9.3",
+    "jquery": "^3.4.1"
   }
 }
