--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,10 @@
     "tests"
   ],
   "dependencies": {
-    "metro": "^4.3.3",
-    "mdi": "^4.5.95",
-    "flag-icon-css": "^3.4.5",
-    "chart.js": "^2.9.3",
-    "jquery": "^3.4.1"
+    "metro": "latest",
+    "mdi": "latest",
+    "flag-icon-css": "latest",
+    "chart.js": "latest",
+    "jquery": "latest"
   }
 }
