--- a/package.json
+++ b/package.json
@@ -4,37 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/locnt19/admin2L-theme.git"
-  },
+  "repository": "git+https://github.com/locnt19/admin2L-theme.git",
   "keywords": [],
-  "author": "",
+  "author": "Loc Thanh <locnt19@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/locnt19/admin2L-theme/issues"
   },
   "homepage": "https://github.com/locnt19/admin2L-theme#readme",
   "dependencies": {
-    "@babel/core": "^7.5.0",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.0",
-    "@babel/register": "^7.4.4",
-    "autoprefixer": "^9.6.0",
+    "@babel/core": "^7.9.0",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/register": "^7.9.0",
+    "autoprefixer": "^9.7.6",
     "browser-sync": "^2.26.7",
-    "css-declaration-sorter": "^4.0.1",
+    "css-declaration-sorter": "^5.1.2",
     "cssnano": "^4.1.10",
-    "del": "^3.0.0",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-image": "^6.0.0",
+    "gulp-image": "^6.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
-    "gulp-rename": "^1.4.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sass-unicode": "^1.0.1",
     "gulp-sourcemaps": "^2.6.4",
